Widgetization of the application : new start parameters "MAIN_ELEMENT" (mandatory) and "SERVER_PREFIX_URI" (optional), various gui fixes when main element is not full window, login form ability to insert dynamically (but no password recall in that case), moved body.overflow from stylesheet to html. Finally, widget sample to drop at the root of the distribution.

--- a/src/client/themes/oxygen/css/ajaxplorer.css
+++ b/src/client/themes/oxygen/css/ajaxplorer.css
@@ -21,8 +21,7 @@ a:active {
 body, html
 {
     margin: 0px;
-    padding: 0px;    
-    overflow: hidden;
+    padding: 0px;
 }
 
 input, textarea
@@ -129,6 +128,7 @@ DIALOG BOXES
     background-color: #eee;
 }
 #all_forms div{display:none;}
+#all_forms form{display:inline;}
 
 #all_forms div div, 
 #all_forms div.shadow_class
